--- a/discover.html
+++ b/discover.html
@@ -21,34 +21,40 @@
             justify-items: center;
             background-color: rgb(255, 168, 168);
         }
+
+        img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
     </style>
 </head>
 
 <body>
     <div id="grid-container">
         <div id="grid-item">
-            <img src="images/image1.jpg" alt="Image 1">
+            <img src="images/tattoos/styles/Blackwork/Blackwork_1.jpg" alt="Image 1">
         </div>
         <div id="grid-item">
-            <img src="images/image2.jpg" alt="Image 2">
+            <img src="images/tattoos/styles/Blackwork/Blackwork_2.jpg" alt="Image 2">
         </div>
         <div id="grid-item">
-            <img src="images/image3.jpg" alt="Image 3">
+            <img src="images/tattoos/styles/Blackwork/Blackwork_3.jpg" alt="Image 3">
         </div>
         <div id="grid-item">
-            <img src="images/image4.jpg" alt="Image 4">
+            <img src="images/tattoos/styles/Blackwork/Blackwork_4.jpg" alt="Image 4">
         </div>
         <div id="grid-item">
-            <img src="images/image5.jpg" alt="Image 5">
+            <img src="images/tattoos/styles/Blackwork/Blackwork_5.jpg" alt="Image 5">
         </div>
         <div id="grid-item">
-            <img src="images/image6.jpg" alt="Image 6">
+            <img src="images/tattoos/styles/realism/real_1.jpg" alt="Image 6">
         </div>
         <div id="grid-item">
-            <img src="images/image7.jpg" alt="Image 7">
+            <img src="images/tattoos/styles/realism/real_2.jpg" alt="Image 7">
         </div>
         <div id="grid-item">
-            <img src="images/image8.jpg" alt="Image 8">
+            <img src="images/tattoos/styles/realism/real_3.jpg" alt="Image 8">
         </div>
     </div>
 </body>
