--- a/discover.html
+++ b/discover.html
@@ -9,23 +9,22 @@
         #grid-container {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
+            gap: 43px;
             padding: 10px;
-            border-radius: 5px;
-            background-color: rgb(255, 57, 57);
+            margin: auto 85px
         }
 
         #grid-item {
             width: 100%;
             height: auto;
             justify-items: center;
-            background-color: rgb(255, 168, 168);
         }
 
         img {
             width: 100%;
             height: auto;
             display: block;
+            border-radius: 5px;
         }
     </style>
 </head>
