--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
         </a>
         <div id="center-buttons">
             <div id="center-buttons-group">
-                <a id="navbutton" href="discover.html">Discover</a>
-                <a id="navbutton" href="#">About Us</a>
-                <a id="navbutton" href="#">Guides</a>
+                <a class="navbutton" id="discover-button" href="discover.html">Discover</a>
+                <a class="navbutton" id="about-us-button" href="about-us.html">About Us</a>
+                <a class="navbutton" id="guides-button" href="guides.html">Guides</a>
             </div>
         </div>
         <div id="right-buttons">
-            <a id="login" href="#">Log In</a>
-            <a id="login" href="#">Create Account</a>
+            <div id="right-buttons-group">
+                <a class="navbutton" id="login" href="#">Log In</a>
+                <a class="navbutton" id="create-account" href="#">Create Account</a>
+            </div>
         </div>
     </div>
     <!-- Header Section -->
     <header>
-        <h1>Where Ink Is Turned Into Art</h1>
+        <h1>Where Ink Is <br>Turned Into Art</h1>
     </header>
     <!--Content Section -->
     <div id="section-1">
@@ -38,23 +40,16 @@
     </div>
     <!-- Footer Section -->
     <footer>
-        <img id="letter-logo" src="#" alt="Inkseek logo">
+        <img id="simple-logo" src="images/logos/inkseeklogosimple.png" alt="Inkseek logo">
         <ul>
-            <p>Quick Links</p>
             <li>
-                <a href="#">Discover</a>
+                <a href="discover.html">Discover</a>
             </li>
             <li>
-                <a href="#">About Us</a>
+                <a href="about-us.html">About Us</a>
             </li>
             <li>
-                <a href="#">Guides</a>
-            </li>
-            <li>
-                <a href="#">Artists</a>
-            </li>
-            <li>
-                <a href="#">FAQs</a>
+                <a href="guides.html">Guides</a>
             </li>
         </ul>
         <ul>
@@ -71,15 +66,6 @@
         <ul>
             <li>
                 <a href="#">Sign Up</a>
-            </li>
-            <li>
-                <a href="#">Accessibility</a>
-            </li>
-            <li>
-                <a href="#">Support</a>
-            </li>
-            <li>
-                <a href="#">Copyright</a>
             </li>
         </ul>
     </footer>
