--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
     </header>
     <!--Content Section -->
     <div id="section-1">
-        <img src="#" alt="image with text">
+        <h2>Find an artist</h2>
+        <p>Search by style, location, reviews, all in one place</p>
+        <h2>Talk with artists directly</h2>
+        <p>Get to know who you're working with</p>
+        <h2>Learn with our guides</h2>
+        <p>The tattoo process should be easy for everyone</p>
     </div>
     <!-- Footer Section -->
     <footer>
