--- a/discover.html
+++ b/discover.html
@@ -7,28 +7,39 @@
     <title>Inkseek</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/grid.css">
+    <link rel="stylesheet" href="styles/discover.css">
 </head>
 
 <body>
+    <!-- Navigation Bar -->
     <div id="navbar">
         <a id="logo-link" href="index.html">
             <img id="bottle-logo" src="images/logos/inkseeklogomain.png" alt="ink bottle dripping">
         </a>
         <div id="center-buttons">
             <div id="center-buttons-group">
-                <a id="navbutton" href="discover.html">Discover</a>
-                <a id="navbutton" href="#">About Us</a>
-                <a id="navbutton" href="#">Guides</a>
+                <a class="navbutton" id="discover-button" href="discover.html">Discover</a>
+                <a class="navbutton" id="about-us-button" href="about-us.html">About Us</a>
+                <a class="navbutton" id="guides-button" href="guides.html">Guides</a>
             </div>
         </div>
         <div id="right-buttons">
-            <a id="login" href="#">Log In</a>
-            <a id="login" href="#">Create Account</a>
+            <div id="right-buttons-group">
+                <a class="navbutton" id="login" href="#">Log In</a>
+                <a class="navbutton" id="create-account" href="#">Create Account</a>
+            </div>
         </div>
     </div>
-    <header>
-        <h1>Discover your next look</h1>
-    </header>
+    <!-- Header Section -->
+    <div id="discover-header">
+        <header>
+            <h1>Discover your next look</h1>
+        </header>
+        <form id="search-form" role="search" aria-label="Site search">
+            <label for="search-bar" class="visually-hidden">Search</label>
+            <input id="search-bar" type="search" name="q" placeholder="Search styles, locations, artists, etc..." />
+        </form>
+    </div>
     <div id="grid-container">
         <div id="grid-item">
             <img src="images/tattoos/styles/Blackwork/Blackwork_1.jpg" alt="Image 1">
