added favicons, javascript for dropdown, and components for the navbar and footer and log in state and stuff

--- a/discover.html
+++ b/discover.html
@@ -8,28 +8,13 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="styles/discover.css">
+    <script src="scripts/components.js"></script>
+    <script src="scripts/auth.js"></script>
 </head>
 
 <body>
     <!-- Navigation Bar -->
-    <div id="navbar">
-        <a id="logo-link" href="index.html">
-            <img id="bottle-logo" src="images/logos/inkseeklogomain.png" alt="ink bottle dripping">
-        </a>
-        <div id="center-buttons">
-            <div id="center-buttons-group">
-                <a class="navbutton" id="discover-button" href="discover.html">Discover</a>
-                <a class="navbutton" id="about-us-button" href="about-us.html">About Us</a>
-                <a class="navbutton" id="guides-button" href="guides.html">Guides</a>
-            </div>
-        </div>
-        <div id="right-buttons">
-            <div id="right-buttons-group">
-                <a class="navbutton" id="login" href="#">Log In</a>
-                <a class="navbutton" id="create-account" href="#">Create Account</a>
-            </div>
-        </div>
-    </div>
+    <div id="navbar-placeholder"></div>
     <!-- Header Section -->
     <div id="discover-header">
         <header>
