--- a/guides.html
+++ b/guides.html
@@ -9,28 +9,13 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="styles/guides.css">
+    <script src="scripts/components.js"></script>
+    <script src="scripts/auth.js"></script>
 </head>
 
 <body>
     <!-- Navigation Bar -->
-    <div id="navbar">
-        <a id="logo-link" href="index.html">
-            <img id="bottle-logo" src="images/logos/inkseeklogomain.png" alt="ink bottle dripping">
-        </a>
-        <div id="center-buttons">
-            <div id="center-buttons-group">
-                <a class="navbutton" id="discover-button" href="discover.html">Discover</a>
-                <a class="navbutton" id="about-us-button" href="about-us.html">About Us</a>
-                <a class="navbutton" id="guides-button" href="guides.html">Guides</a>
-            </div>
-        </div>
-        <div id="right-buttons">
-            <div id="right-buttons-group">
-                <a class="navbutton" id="login" href="#">Log In</a>
-                <a class="navbutton" id="create-account" href="#">Create Account</a>
-            </div>
-        </div>
-    </div>
+    <div id="navbar-placeholder"></div>
     <!-- Header Section -->
     <div id="guides-header">
         <header>
@@ -72,36 +57,7 @@
         </a>
     </div>
     <!-- Footer Section -->
-    <footer>
-        <img id="simple-logo" src="images/logos/inkseeklogosimple.png" alt="Inkseek logo">
-        <ul>
-            <li>
-                <a href="discover.html">Discover</a>
-            </li>
-            <li>
-                <a href="about-us.html">About Us</a>
-            </li>
-            <li>
-                <a href="guides.html">Guides</a>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <a href="#">Instagram</a>
-            </li>
-            <li>
-                <a href="#">TikTok</a>
-            </li>
-            <li>
-                <a href="#">Facebook</a>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <a href="#">Sign Up</a>
-            </li>
-        </ul>
-    </footer>
+    <div id="footer-placeholder"></div>
 </body>
 
 </html>
