--- a/discover.html
+++ b/discover.html
@@ -27,28 +27,28 @@
     </div>
     <div id="grid-container">
         <div id="grid-item">
-            <img src="images/tattoos/styles/Blackwork/Blackwork_1.jpg" alt="Image 1">
+            <a href="image-view.html"><img src="images/tattoos/styles/Japanese/japanese_1.jpg" alt="Image 1"></a>
         </div>
         <div id="grid-item">
-            <img src="images/tattoos/styles/Blackwork/Blackwork_2.jpg" alt="Image 2">
+            <a href="image-view.html"><img src="images/tattoos/styles/Tribal/Tribal_1.jpg" alt="Image 2"></a>
         </div>
         <div id="grid-item">
-            <img src="images/tattoos/styles/Blackwork/Blackwork_3.jpg" alt="Image 3">
+            <a href="image-view.html"><img src="images/tattoos/styles/Anime/Anime_girl.jpg" alt="Image 3"></a>
         </div>
         <div id="grid-item">
-            <img src="images/tattoos/styles/Blackwork/Blackwork_4.jpg" alt="Image 4">
+            <a href="image-view.html"><img src="images/tattoos/styles/Watercolor/watercolor_1.jpg" alt="Image 4"></a>
         </div>
         <div id="grid-item">
-            <img src="images/tattoos/styles/Blackwork/Blackwork_5.jpg" alt="Image 5">
+            <a href="image-view.html"><img src="images/tattoos/styles/Traditional/trad_1.jpg" alt="Image 5"></a>
         </div>
         <div id="grid-item">
-            <img src="images/tattoos/styles/realism/real_1.jpg" alt="Image 6">
+            <a href="image-view.html"><img src="images/tattoos/styles/realism/real_1.jpg" alt="Image 6"></a>
         </div>
         <div id="grid-item">
-            <img src="images/tattoos/styles/realism/real_2.jpg" alt="Image 7">
+            <a href="image-view.html"><img src="images/tattoos/styles/Geometric/geo_1.jpg" alt="Image 7"></a>
         </div>
         <div id="grid-item">
-            <img src="images/tattoos/styles/realism/real_3.jpg" alt="Image 8">
+            <a href="image-view.html"><img src="images/tattoos/styles/realism/real_3.jpg" alt="Image 8"></a>
         </div>
     </div>
 </body>
