--- a/guides.html
+++ b/guides.html
@@ -25,7 +25,7 @@
     </div>
     <!-- Guides Grid -->
     <div id="grid-container">
-        <a href="#" class="guide-item">
+        <a href="guide-detail.html" class="guide-item">
             <div class="guide-card">
                 <img src="images/Guide Thumbnails/Tattoo_aftercare.jpg" alt="Tattoo Aftercare Guide">
                 <h3 class="guide-title">Tattoo Aftercare - The Do's and Don'ts</h3>
