--- a/user-profile.html
+++ b/user-profile.html
@@ -21,8 +21,8 @@
         <!-- Left Profile Column -->
         <div id="profile-sidebar">
             <div id="profile-info">
-                <h2 id="username">@username</h2>
-                <p id="realname">John Doe</p>
+                <h2 id="username">@Thewanderingquill</h2>
+                <p id="realname">Mayson Quill</p>
 
                 <div id="stats">
                     <div class="stat">
@@ -40,8 +40,10 @@
                 </div>
 
                 <div id="profile-buttons">
-                    <button class="profile-btn" id="edit-profile-btn">Edit Profile</button>
-                    <button class="profile-btn" id="messages-btn">Messages</button>
+                    <button class="profile-btn" id="edit-profile-btn"
+                        onclick="window.location.href='user-settings.html'">Edit Profile</button>
+                    <button class="profile-btn" id="messages-btn"
+                        onclick="window.location.href='messages.html'">Messages</button>
                 </div>
             </div>
 
@@ -50,8 +52,8 @@
                     <h3>About</h3>
                 </div>
                 <div id="about-content">
-                    <p>Tattoo enthusiast exploring different styles and connecting with talented artists. Always looking
-                        for inspiration for my next piece.</p>
+                    <p>My name is Mayson, but most people call me Quill! I'm an Orlando native born and raised and new
+                        to tattoos. Discovering styles and artists here has been a great confidence boost.</p>
                 </div>
             </div>
         </div>
@@ -63,19 +65,19 @@
                 <div class="bookmark-item">
                     <img src="images/tattoos/styles/Blackwork/Blackwork_1.jpg" alt="Saved Tattoo 1">
                 </div>
-                <div class="bookmark-item">
+                <div class="bookmark-item ratio-3-4">
                     <img src="images/tattoos/styles/realism/real_1.jpg" alt="Saved Tattoo 2">
                 </div>
-                <div class="bookmark-item">
+                <div class="bookmark-item ratio-1-1">
                     <img src="images/tattoos/styles/Japanese/japanese_1.jpg" alt="Saved Tattoo 3">
                 </div>
-                <div class="bookmark-item">
+                <div class="bookmark-item ratio-2-3">
                     <img src="images/tattoos/styles/Watercolor/watercolor_1.jpg" alt="Saved Tattoo 4">
                 </div>
-                <div class="bookmark-item">
+                <div class="bookmark-item ratio-1-1">
                     <img src="images/tattoos/styles/Traditional/trad_1.jpg" alt="Saved Tattoo 5">
                 </div>
-                <div class="bookmark-item">
+                <div class="bookmark-item ratio-3-4">
                     <img src="images/tattoos/styles/Geometric/geo_1.jpg" alt="Saved Tattoo 6">
                 </div>
             </div>
