--- a/login.html
+++ b/login.html
@@ -29,8 +29,8 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password">
 
-                <a href="user-profile.html"><button type="button" id="login-button" onclick="setLoginState('user')">Log
-                        In</button></a>
+                <button type="button" id="login-button"
+                    onclick="const username = document.getElementById('username').value; setLoginState('user', username ? '@' + username : '@username'); window.location.href='user-profile.html';">Log In</button>
             </form>
 
             <div id="signup-links">
