html and components updated

--- a/login.html
+++ b/login.html
@@ -30,7 +30,8 @@
                 <input type="password" id="password" name="password">
 
                 <button type="button" id="login-button"
-                    onclick="const username = document.getElementById('username').value; setLoginState('user', username ? '@' + username : '@username'); window.location.href='user-profile.html';">Log In</button>
+                    onclick="const username = document.getElementById('username').value; setLoginState('user', username ? '@' + username : '@username'); window.location.href='user-profile.html';">Log
+                    In</button>
             </form>
 
             <div id="signup-links">
