discover image fixed

--- a/discover.html
+++ b/discover.html
@@ -170,7 +170,8 @@
             <a href="image-view.html"><img src="images/tattoos/styles/Sketch/sketch_1.jpg" alt="Image 14"></a>
         </div>
         <div id="grid-item">
-            <a href="image-view.html"><img src="images/tattoos/styles/Portraiture/portrait_1.jpg" alt="Image 15"></a>
+            <a href="image-view.html"><img src="images/tattoos/styles/Portraiture/portrait_hangover.jpg"
+                    alt="Image 15"></a>
         </div>
         <div id="grid-item">
             <a href="image-view.html"><img src="images/tattoos/styles/Illustrative/illustrative_1.jpg"
