final fixes: log in/create account, navbar changes, footer added to discover page

--- a/artist-profile.html
+++ b/artist-profile.html
@@ -257,6 +257,33 @@
         </div>
     </div>
 
+    <!-- Review Artist Overlay -->
+    <div id="review-overlay" class="overlay">
+        <div id="review-modal">
+            <img src="images/favicons/cancel.png" id="close-review-modal" class="close-btn" alt="Close">
+            <h2 style="font-family: 'BBH Hegarty', sans-serif; text-align: left; font-weight: normal;">Review Artist
+            </h2>
+
+            <div id="review-form-content">
+                <div id="star-rating-container">
+                    <div class="star-rating">
+                        <span class="rating-star" data-value="1">★</span>
+                        <span class="rating-star" data-value="2">★</span>
+                        <span class="rating-star" data-value="3">★</span>
+                        <span class="rating-star" data-value="4">★</span>
+                        <span class="rating-star" data-value="5">★</span>
+                    </div>
+                </div>
+
+                <div id="review-text-container">
+                    <textarea id="review-text-input" placeholder="Add review..." rows="6"></textarea>
+                </div>
+
+                <button id="submit-review-btn" class="review-submit-btn">Review Artist</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer Section -->
     <div id="footer-placeholder"></div>
 </body>
