--- a/discover.html
+++ b/discover.html
@@ -178,6 +178,9 @@
                     alt="Image 16"></a>
         </div>
     </div>
+
+    <!-- Footer Section -->
+    <div id="footer-placeholder"></div>
 </body>
 
 </html>
